--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ cloudinary==1.32.0
 dj-database-url==1.2.0
 dj3-cloudinary-storage==0.0.6
 Django==4.1.7
+django-ckeditor==6.5.1
+django-js-asset==2.0.0
 gunicorn==20.1.0
+Pillow==9.4.0
 psycopg2==2.9.5
 sqlparse==0.4.3
