--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.6.0
 backports.zoneinfo==0.2.1
+chardet==3.0.4
 cloudinary==1.32.0
 dj-database-url==1.2.0
 dj3-cloudinary-storage==0.0.6
@@ -7,6 +8,9 @@ Django==4.1.7
 django-ckeditor==6.5.1
 django-js-asset==2.0.0
 gunicorn==20.1.0
+idna==2.10
 Pillow==9.4.0
 psycopg2==2.9.5
+requests==2.23.0
 sqlparse==0.4.3
+urllib3==1.25.11
