--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 asgiref==3.6.0
-backports.zoneinfo==0.2.1;python_version<"3.9"
 chardet==3.0.4
 cloudinary==1.30.0
-dj-database-url==1.2.0
+dj-database-url==2.1.0
 dj3-cloudinary-storage==0.0.6
 Django==4.1.7
 django-ckeditor==6.5.1
@@ -11,6 +10,7 @@ gunicorn==20.1.0
 idna==2.10
 Pillow==9.4.0
 psycopg2==2.9.5
+python-dotenv==1.0.0
 requests==2.28.2
 sqlparse==0.4.3
 urllib3==1.26.15
