--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
-asgiref==3.6.0
-chardet==3.0.4
-cloudinary==1.30.0
+asgiref==3.7.2
+chardet==5.2.0
+cloudinary==1.39.0
 dj-database-url==2.1.0
 dj3-cloudinary-storage==0.0.6
-Django==4.1.7
-django-ckeditor==6.5.1
-django-js-asset==2.0.0
-gunicorn==20.1.0
-idna==2.10
-Pillow==9.4.0
-psycopg2==2.9.5
-python-dotenv==1.0.0
-requests==2.28.2
-sqlparse==0.4.3
-urllib3==1.26.15
-whitenoise==6.4.0
+Django==5.0.3
+django-ckeditor==6.7.1
+django-faicon==0.1.0
+django-js-asset==2.2.0
+gunicorn==21.2.0
+idna==3.6
+pillow==10.2.0
+psycopg2==2.9.9
+python-dotenv==1.0.1
+PyYAML==6.0.1
+requests==2.31.0
+sqlparse==0.4.4
+urllib3==2.2.1
+whitenoise==6.6.0
